<resources>
    <string name="app_name">Sample Office Task</string>
    <string name="action_settings">Settings</string>
    <string name="email_address">email address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="register">Register</string>
    <string name="have_an_account_sign_in_here">Have an account? Sign in here</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="enter_the_note">Enter the note</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
